--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dialog": "^1.1.3",
@@ -27,11 +28,13 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "prisma": "^5.10.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.4.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "task-assistant": "file:",
